<resources>
    <string name="app_name">DeviceInventoryMgmt</string>
    <string name="device_name"><b>Device Name: </b></string>
    <string name="select_device">Select Device: </string>
    <string name="device_status"><b>Device Status: </b></string>
    <string name="device_date"><b>Returned Date: </b></string>
    <string name="employee_name"><b>Employee Name: </b></string>
    <string name="assign">Assign</string>
    <string name="total_inventory"><b>Total Inventory: </b></string>
    <string name="current_inventory"><b>Current Inventory: </b></string>
    <string name="email"><b>Email: </b></string>
    <string name="emailId">Abc@xyz.com</string>
    <string name="alert_message">Are you sure, you want to remove it?</string>
    <string name="add_device">Add</string>
    <string name="delete_device">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="status_lost">Lost</string>
    <string name="status_returned">Returned</string>
    <string name="device_list">Device List</string>
    <string name="employee_list">Employee List</string>
    <string name="device_allotted_list">Device Allotted List</string>

    <string name="navigation_view_header_title">Mahesh Gupta
    Assignment Device Inventory Management System</string>
    <!-- Content Descriptions -->
    <string name="header_image_content_description">Device Inventory header image</string>

    <!--*******************************Filter***************-->
    <string name="issued_menu_filter">Issued</string>
    <string name="returned_menu_filter">Returned</string>
    <string name="lost_menu_filter">Lost</string>
    <string name="all_menu_filter">All</string>

    <string name="no_returned_inventory">You have no Returned device inventory!</string>
    <string name="no_issued_inventory">You have no Issued device inventory!</string>
    <string name="no_lost_inventory">You have no Lost device inventory!</string>
    <string name="no_inventory">You have not any inventory!</string>
    <string name="no_device"> You have not any device record! <br />Please add <b>"Device"</b> by below button</string>
    <string name="no_employee"> You have not any employee record! <br />Please add <b>"Employee"</b> by below button</string>

    <!-- Messages -->
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
</resources>