<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="deviceinfo"
            type="com.mpg.nagarro.deviceinventorymgmt.data.entity.DeviceInventory" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?android:listPreferredItemHeight">

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_device_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_device_name" />

        <TextView
            android:id="@+id/tv_employee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/employee_name"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_device_name"
            app:layout_constraintStart_toEndOf="@id/tv_device_name" />

        <TextView
            android:id="@+id/tv_device_returned_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_device_status" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>