<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mpg.nagarro.deviceinventorymgmt.ui.employee.AddEditEmployeeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/page_padding"
        tools:context=".ui.employee.AddEditEmployeeFragment">

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/iv_header_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:materialIcon="face_profile"
            app:materialIconColor="#666"
            app:materialIconSize="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/employeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_header_img">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_name"
                android:text="@={viewModel.empName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/employeeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/employeeName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:text="@={viewModel.empEmail}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_device"
            app:layout_constraintEnd_toStartOf="@id/employeeEmail"
            app:layout_constraintTop_toBottomOf="@id/employeeEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>